; ModuleID = '/home/carl/AnghaBench/i3/i3bar/src/extr_child.c_read_flat_input.c'
source_filename = "/home/carl/AnghaBench/i3/i3bar/src/extr_child.c_read_flat_input.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.status_block = type { i32 }

@statusline_head = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i8*, i32)* @read_flat_input to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @read_flat_input(i8* %0, i32 %1) #0 {
  %3 = alloca i8*, align 8
  %4 = alloca i32, align 4
  %5 = alloca %struct.status_block*, align 8
  store i8* %0, i8** %3, align 8
  store i32 %1, i32* %4, align 4
  %6 = call %struct.status_block* @TAILQ_FIRST(i32* @statusline_head)
  store %struct.status_block* %6, %struct.status_block** %5, align 8
  %7 = load %struct.status_block*, %struct.status_block** %5, align 8
  %8 = getelementptr inbounds %struct.status_block, %struct.status_block* %7, i32 0, i32 0
  %9 = load i32, i32* %8, align 4
  %10 = call i32 @I3STRING_FREE(i32 %9)
  %11 = load i8*, i8** %3, align 8
  %12 = load i32, i32* %4, align 4
  %13 = sub nsw i32 %12, 1
  %14 = sext i32 %13 to i64
  %15 = getelementptr inbounds i8, i8* %11, i64 %14
  %16 = load i8, i8* %15, align 1
  %17 = sext i8 %16 to i32
  %18 = icmp eq i32 %17, 10
  br i1 %18, label %28, label %19

19:                                               ; preds = %2
  %20 = load i8*, i8** %3, align 8
  %21 = load i32, i32* %4, align 4
  %22 = sub nsw i32 %21, 1
  %23 = sext i32 %22 to i64
  %24 = getelementptr inbounds i8, i8* %20, i64 %23
  %25 = load i8, i8* %24, align 1
  %26 = sext i8 %25 to i32
  %27 = icmp eq i32 %26, 13
  br i1 %27, label %28, label %34

28:                                               ; preds = %19, %2
  %29 = load i8*, i8** %3, align 8
  %30 = load i32, i32* %4, align 4
  %31 = sub nsw i32 %30, 1
  %32 = sext i32 %31 to i64
  %33 = getelementptr inbounds i8, i8* %29, i64 %32
  store i8 0, i8* %33, align 1
  br label %39

34:                                               ; preds = %19
  %35 = load i8*, i8** %3, align 8
  %36 = load i32, i32* %4, align 4
  %37 = sext i32 %36 to i64
  %38 = getelementptr inbounds i8, i8* %35, i64 %37
  store i8 0, i8* %38, align 1
  br label %39

39:                                               ; preds = %34, %28
  %40 = load i8*, i8** %3, align 8
  %41 = call i32 @i3string_from_utf8(i8* %40)
  %42 = load %struct.status_block*, %struct.status_block** %5, align 8
  %43 = getelementptr inbounds %struct.status_block, %struct.status_block* %42, i32 0, i32 0
  store i32 %41, i32* %43, align 4
  ret void
}

declare dso_local %struct.status_block* @TAILQ_FIRST(i32*) #1

declare dso_local i32 @I3STRING_FREE(i32) #1

declare dso_local i32 @i3string_from_utf8(i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
